--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # © 2017–present Harald Rudell <harald.rudell@gmail.com> (https://haraldrudell.github.io/haraldrudell/)
 # ISC License
 /bin/
+/pushparl
